--- a/ESOFT_DATA_СONVERSION.ipynb
+++ b/ESOFT_DATA_СONVERSION.ipynb
@@ -208,22 +208,10 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PwNYu2R0UY9Q",
-        "outputId": "00f29f5d-7e31-4395-ec52-544fb1dcbab4"
+        "id": "PwNYu2R0UY9Q"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -264,8 +252,8 @@
       "source": [
         "file_flat = ('/content/drive/MyDrive/Colab Notebooks/files_labs/E-SOFT/sold_flats_2020-09-30.csv')\n",
         "data_flat = pd.read_csv(file_flat, sep=\",\")\n",
-        "display(data_flat.info())\n",
-        "display(data_flat.shape)\n"
+        "display(data_flat.info());\n",
+        "display(data_flat.shape);\n"
       ],
       "metadata": {
         "colab": {
@@ -273,9 +261,9 @@
           "height": 868
         },
         "id": "MQvjgsNOUe7s",
-        "outputId": "d5723284-6e34-4df1-d087-b4016fb162e3"
+        "outputId": "1758b351-188c-4102-ed05-c676d31046e2"
       },
-      "execution_count": 4,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -6181,33 +6169,10 @@
         "data_transformation['bathrooms_cnt'] = data_transformation['bathrooms_cnt'].replace(0, 1)"
       ],
       "metadata": {
-        "id": "y32oNCpadI-f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d0b409ba-c712-43c4-c306-89e3d8de2770"
+        "id": "y32oNCpadI-f"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-10-12ee78c0fd05>:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  data_transformation['bathrooms_cnt'] = data_transformation['bathrooms_cnt'].fillna(1)\n",
-            "<ipython-input-10-12ee78c0fd05>:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  data_transformation['bathrooms_cnt'] = data_transformation['bathrooms_cnt'].replace(0, 1)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -6224,27 +6189,10 @@
         "data_transformation['territory'] = data_transformation['territory'].apply(lambda x: len(x.split(',')) if pd.notna(x) else np.nan)"
       ],
       "metadata": {
-        "id": "9ix3fL2ufeU8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a49adecc-092c-40f8-de8c-38cd26a6afb2"
+        "id": "9ix3fL2ufeU8"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-11-1031e1ae9160>:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  data_transformation['territory'] = data_transformation['territory'].apply(lambda x: len(x.split(',')) if pd.notna(x) else np.nan)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -53009,55 +52957,10 @@
         "data_transformation = data_transformation.dropna(subset=['territory','rooms_cnt', 'bedrooms_cnt','building_year'])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8MgHOtKIdiQZ",
-        "outputId": "0a6acbbc-5991-4b64-b05b-ed76e678397b"
+        "id": "8MgHOtKIdiQZ"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n",
-            "/usr/local/lib/python3.9/dist-packages/numpy/lib/nanfunctions.py:1216: RuntimeWarning: Mean of empty slice\n",
-            "  return np.nanmean(a, axis, out=out, keepdims=keepdims)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
